<resources>
    <string name="app_name">Dreeco</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="not_a_member">First Time User? Register</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="conf_password">Confirm Password</string>
    <string name="empty_fields">Fields can not be empty</string>
    <string name="login_failed">Login Failed!!</string>
    <string name="register_failed">Registration Attempt Failed!!</string>
    <string name="user_exists">This user is already registered!!</string>
    <string name="register_success">Registration Success! Go back and login</string>
    <string name="can_not_be_empty">can not be empty</string>
    <string name="password_length_constraint">Password must be at least 8 characters long</string>
    <string name="password_match_constraint">Both Passwords need to match</string>
    <string name="phone_constraint">Phone Number Incorrect!</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="loading">Loading</string>
    <string name="wait">Please Wait</string>
    <string name="check_mail">Please check your email</string>
    <string name="profile">Profile</string>
    <string name="nearby">Nearby</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="add_new">Add New</string>
    <string name="notifications">Notifications</string>
    <string name="cart">Cart</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="name">Name</string>
    <string name="my_orders">&#8226; My Orders</string>
    <string name="payments">&#8226; Payments</string>
    <string name="offers">&#8226; Offers/Coupons</string>
    <string name="refer">&#8226; Invite a Friend</string>
    <string name="rate_us">&#8226; Rate Us</string>
    <string name="help">&#8226; Help and Support</string>
    <string name="sign_out">Sign Out</string>
    <string name="share_using">Invite Using</string>
    <string name="daily_needs">Daily Needs</string>
</resources>
