<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search_bottom"
        android:enabled="true"
        android:icon="@drawable/ic_action_action_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/map_bottom"
        android:enabled="true"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/map"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_new"
        android:enabled="true"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/add_new"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/notifications"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_active_black_24dp"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />
</menu>