<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="23dp"
        android:paddingLeft="16dp"
        android:paddingTop="23dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/icons"
        android:textSize="26sp" />

    <Button
        android:id="@+id/btn_sign_in"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginLeft="16dp"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="4dp"
        android:padding="20dp"
        android:text="@string/login"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/icons" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/coupons_drawer_logged_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:text="@string/offers"
                android:textColor="@color/icons"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/invite_drawer_logged_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:text="@string/refer"
                android:textColor="@color/icons"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rate_drawer_logged_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:text="@string/rate_us"
                android:textColor="@color/icons"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/help_drawer_logged_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:text="@string/help"
                android:textColor="@color/icons"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
